--- a/CodingExcersise/app/src/main/res/layout/activity_main.xml
+++ b/CodingExcersise/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="pavle.com.codingexcersise.MainActivity">
 
-    <TextView
-        android:text="Hello World!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ListView
+        android:id="@+id/lvMain"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
+    </ListView>
 </RelativeLayout>
