--- a/CodingExcersise/app/src/main/res/layout/activity_view.xml
+++ b/CodingExcersise/app/src/main/res/layout/activity_view.xml
@@ -39,10 +39,11 @@
     </ScrollView>
 
     <ImageView
+        android:id="@+id/ivPicture"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        android:src="@drawable/image"
+        android:src="@drawable/broken_image"
         android:layout_weight="45"
     />
 
